chore: Updated author info

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "author": {
     "name": "Vlad Cuciureanu",
-    "email": "vlad.cuciureanu@pm.me",
-    "url": "https://vladcuciureanu.com"
+    "email": "vlad@cuciureanu.me",
+    "url": "https://vlad.cuciureanu.me"
   },
   "scripts": {
     "dev": "next dev",
